Fix article spacing (l)

--- a/src/Resources/public/framework/scss/styles/_spacing.scss
+++ b/src/Resources/public/framework/scss/styles/_spacing.scss
@@ -208,13 +208,13 @@
   }
 
   .x-spacing-medium > .inside, .x-spacing-medium #container > .inside {
-    width: sum(1200px, $grid-gutter-width, 'px');
+    width: sub(1200px, $grid-gutter-width, 'px');
     margin-left: auto;
     margin-right: auto;
   }
 
   .x-spacing-medium.small-gutter > .inside, .x-spacing-medium.small-gutter #container > .inside {
-    width: sum(1200px, $grid-gutter-small-width, 'px');
+    width: sub(1200px, $grid-gutter-small-width, 'px');
     margin-left: auto;
     margin-right: auto;
   }
